release problems